// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpServer Simple POST / 1`] = `
Array [
  Object {
    "body": "Hello",
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "connection": "close",
      "content-length": "5",
      "content-type": "application/x-www-form-urlencoded",
      "host": "localhost",
      "user-agent": "axios/0.19.2",
    },
    "method": "POST",
    "url": "/",
  },
]
`;

exports[`HttpServer should GET /json and return json requests 1`] = `
Array [
  Object {
    "body": Object {
      "test": "data",
    },
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json;charset=utf-8",
      "host": "localhost",
      "user-agent": "axios/0.19.2",
    },
    "method": "POST",
    "url": "/json",
  },
]
`;
